--- a/public-Workshop Script.rmd
+++ b/public-Workshop Script.rmd
@@ -20,7 +20,7 @@ library(labelled)
 library(sjlabelled)
 
 
-combined <- readRDS("/Users/AntonieHsu/Desktop/combined.Rds")          
+combined <- readRDS("XXX") ## Use your own repository!         
 combined <- combined %>%
   mutate(cola = case_when(YEAR %in% c(1980, 1990) ~ 100, 
                           YEAR == 2000 ~ cola2002, 
